--- a/install
+++ b/install
@@ -1,5 +1,5 @@
 $desktopPath = [System.Environment]::GetFolderPath('Desktop')
-
+$installScriptPath = "$env:USERPROFILE\Downloads\install.ps1"
 $zapretZipPath = "$env:USERPROFILE\Downloads\zapret.zip"
 $zapretFolderPath = "$desktopPath\zapret"
 
@@ -18,5 +18,10 @@ Invoke-WebRequest -Uri $zipUrl -OutFile $zapretZipPath
 Expand-Archive -Path $zapretZipPath -DestinationPath $desktopPath -Force
 
 Remove-Item $zapretZipPath -Force
+
+if (Test-Path $installScriptPath) {
+    Write-Host "Удаление install.ps1 из папки Загрузки..."
+    Remove-Item $installScriptPath -Force
+}
 
 Stop-Process -Id $PID -Force
