--- a/install
+++ b/install
@@ -1,10 +1,6 @@
-& taskkill /f /im winws.exe 2>$null
-if (& sc query windivert 2>$null | Select-String "SERVICE_NAME") {
-    & sc stop windivert 2>$null
-    & sc delete windivert 2>$null
-} else {
-    Write-Host "Служба Windivert не найдена. Пропуск..."
-}
+Stop-Process -Name "winws" -Force 2>$null 3>$null
+Stop-Service -Name "windivert" 2>$null 3>$null
+& sc.exe delete windivert >$null 2>$null
 $desktopPath = [System.Environment]::GetFolderPath('Desktop')
 $zapretZipPath = "$env:USERPROFILE\Downloads\zapret.zip"
 $zapretFolderPath = "$desktopPath\zapret"
