--- a/install
+++ b/install
@@ -1,6 +1,6 @@
 Stop-Process -Name "winws" -Force 2>$null 3>$null
 Stop-Service -Name "windivert" 2>$null 3>$null
-& sc.exe delete windivert >$null 2>$null
+sc.exe delete windivert >$null 2>$null
 $desktopPath = [System.Environment]::GetFolderPath('Desktop')
 $zapretZipPath = "$env:USERPROFILE\Downloads\zapret.zip"
 $zapretFolderPath = "$desktopPath\zapret"
