--- a/install
+++ b/install
@@ -1,17 +1,22 @@
+# Принудительное завершение процесса winws.exe с скрытием ошибок
 try {
-    Stop-Process -Name "winws" -Force -ErrorAction Stop
+    Stop-Process -Name "winws" -Force -ErrorAction SilentlyContinue 2>$null
 } catch {
-    Write-Host "Ошибка при завершении процесса winws: $_" -ForegroundColor Red
+    # Ошибка не будет отображаться
 }
+
+# Остановка службы Windivert с скрытием ошибок
 try {
-    Stop-Service -Name "windivert" -Force -ErrorAction Stop
+    Stop-Service -Name "windivert" -Force -ErrorAction SilentlyContinue 2>$null
 } catch {
-    Write-Host "Ошибка при остановке службы windivert: $_" -ForegroundColor Red
+    # Ошибка не будет отображаться
 }
+
+# Удаление службы Windivert с скрытием ошибок
 try {
     & sc.exe delete windivert 2>$null
 } catch {
-    Write-Host "Ошибка при удалении службы windivert: $_" -ForegroundColor Red
+    # Ошибка не будет отображаться
 }
 $desktopPath = [System.Environment]::GetFolderPath('Desktop')
 $zapretZipPath = "$env:USERPROFILE\Downloads\zapret.zip"
