--- a/install
+++ b/install
@@ -1,22 +1,34 @@
-# Принудительное завершение процесса winws.exe с скрытием ошибок
-try {
-    Stop-Process -Name "winws" -Force -ErrorAction SilentlyContinue 2>$null
-} catch {
-    # Ошибка не будет отображаться
+# Проверка и завершение процесса winws.exe с скрытием ошибок
+if (Get-Process -Name "winws" -ErrorAction SilentlyContinue) {
+    try {
+        Stop-Process -Name "winws" -Force -ErrorAction SilentlyContinue 2>$null
+    } catch {
+        # Ошибка не будет отображаться
+    }
+} else {
+    # Процесс не найден, пропуск
 }
 
-# Остановка службы Windivert с скрытием ошибок
-try {
-    Stop-Service -Name "windivert" -Force -ErrorAction SilentlyContinue 2>$null
-} catch {
-    # Ошибка не будет отображаться
+# Проверка и остановка службы Windivert с скрытием ошибок
+if (Get-Service -Name "windivert" -ErrorAction SilentlyContinue) {
+    try {
+        Stop-Service -Name "windivert" -Force -ErrorAction SilentlyContinue 2>$null
+    } catch {
+        # Ошибка не будет отображаться
+    }
+} else {
+    # Служба не найдена, пропуск
 }
 
 # Удаление службы Windivert с скрытием ошибок
-try {
-    & sc.exe delete windivert 2>$null
-} catch {
-    # Ошибка не будет отображаться
+if (Get-Service -Name "windivert" -ErrorAction SilentlyContinue) {
+    try {
+        & sc.exe delete windivert 2>$null
+    } catch {
+        # Ошибка не будет отображаться
+    }
+} else {
+    # Служба не найдена, пропуск
 }
 $desktopPath = [System.Environment]::GetFolderPath('Desktop')
 $zapretZipPath = "$env:USERPROFILE\Downloads\zapret.zip"
