--- a/install
+++ b/install
@@ -19,18 +19,61 @@ if (Get-Service -Name "windivert" -ErrorAction SilentlyContinue) {
     }
 } else {
 }
+# Определение путей
 $desktopPath = [System.Environment]::GetFolderPath('Desktop')
 $zapretZipPath = "$env:USERPROFILE\Downloads\zapret.zip"
 $zapretFolderPath = "$desktopPath\zapret"
 $zipUrl = "https://github.com/vayulqq/zapret/releases/download/qedqedndndn/zapret.zip"
+
+# Функция для вывода цветных сообщений
+function Write-ColorMessage {
+    param (
+        [string]$message,
+        [string]$color = "White"
+    )
+    Write-Host $message -ForegroundColor $color
+}
+
+# Проверка и удаление предыдущего архива (если существует)
 if (Test-Path $zapretZipPath) {
+    Write-ColorMessage "Удаление старого ZIP архива..." -ForegroundColor Red
     Remove-Item $zapretZipPath -Force
 }
+
+# Проверка и удаление предыдущей папки (если существует)
 if (Test-Path $zapretFolderPath) {
+    Write-ColorMessage "Удаление старой папки..." -ForegroundColor Red
     Remove-Item $zapretFolderPath -Recurse -Force
 }
-Invoke-WebRequest -Uri $zipUrl -OutFile $zapretZipPath
-Expand-Archive -Path $zapretZipPath -DestinationPath $desktopPath -Force
+
+# Скачивание ZIP файла
+Write-ColorMessage "Скачивание ZIP файла..." -ForegroundColor Cyan
+try {
+    Invoke-WebRequest -Uri $zipUrl -OutFile $zapretZipPath
+    Write-ColorMessage "ZIP файл успешно скачан!" -ForegroundColor Green
+} catch {
+    Write-ColorMessage "Ошибка при скачивании файла!" -ForegroundColor Yellow
+    exit 1
+}
+
+# Распаковка архива
+Write-ColorMessage "Распаковка архива..." -ForegroundColor Cyan
+try {
+    Expand-Archive -Path $zapretZipPath -DestinationPath $desktopPath -Force
+    Write-ColorMessage "Архив успешно распакован!" -ForegroundColor Green
+} catch {
+    Write-ColorMessage "Ошибка при распаковке архива!" -ForegroundColor Yellow
+    exit 1
+}
+
+# Удаление ZIP файла после распаковки
+Write-ColorMessage "Удаление ZIP файла..." -ForegroundColor Red
 Remove-Item $zapretZipPath -Force
+
+# Открытие README
+Write-ColorMessage "Открытие README..." -ForegroundColor Cyan
 start https://raw.githubusercontent.com/vayulqq/zapret/main/readme.txt
+
+# Завершение текущего процесса
+Write-ColorMessage "Завершение скрипта..." -ForegroundColor Magenta
 Stop-Process -Id $PID -Force
